Fixed header, Changed z-indexes

--- a/style.css
+++ b/style.css
@@ -7,12 +7,17 @@
 header {
 	width: 100%;
 	height: 50px;
+	position: fixed;
+	background-color: #f9f8ef;
+	z-index: 50;
 }
-h1 {
+h1 a {
 	font-size: 20pt;
 	width: 439px;
 	float: left;
 	padding-left: 50px;
+	padding-top: 20px;
+	text-decoration: none;
 }
 nav a{
 	float: right;
@@ -27,6 +32,12 @@ h2 {
 	text-align: center;
 	font-size: 235pt;
 	overflow: hidden;
+	position: absolute;
+	background: none;
+	line-height: 75%;
+	top: 175px;
+	font-weight: 200;
+	z-index: 5;
 }
 #photo1 {
 	background-color: rgba(237,237,237,0.2);
